--- a/imdex.html
+++ b/imdex.html
@@ -37,7 +37,7 @@
                                     <div class="dropdown d-flex">
                                         <p>card access</p>
                                         <div class="dropicon">
-                                            <img src="image/Icons.png" alt="" class="contain">
+                                            <img src="./image/Icons.png" alt="" class="contain">
                                         </div>
                                     </div>
                                 </li>
@@ -51,7 +51,7 @@
                         </div>
                         <button class="  d-flex">
                             <a href="#">login</a>
-                            <img src="image/log-in.png" alt="" style="width: 15px; height: 15px;">
+                            <img src="./image/log-in.png" alt="" style="width: 15px; height: 15px;">
                             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
                         </button>
@@ -69,7 +69,7 @@
                         aliqua. Ut enim ad minim veniam, quis nostrud</p>
                     <button>
                         <a href="#">Unlock your Card </a>
-                        <img src="image/Icons (1).png" alt="">
+                        <img src="./image/Icons (1).png" alt="">
                     </button>
                     <span id="credit">*No credit card required</span>
                 </div>
@@ -81,28 +81,28 @@
             <div class="container">
                 <div class="name-box d-flex">
                     <div class="name1">
-                        <img src="image/Clip path group.png" alt="" class="contain">
+                        <img src="./image/nuxt.png" alt="" class="contain">
                     </div>
                     <div class="name1">
-                        <img src="image/Company logo.png" alt="" class="contain">
+                        <img src="./image/miro.png" alt="" class="contain">
                     </div>
                     <div class="name1">
-                        <img src="image/image 20.png" alt="" class="contain">
+                        <img src="./image/lottie.png" alt="" class="contain">
                     </div>
                     <div class="name1">
-                        <img src="image/Vector (6).png" alt="" class="contain">
+                        <img src="./image/wise.png" alt="" class="contain">
                     </div>
                     <div class="name1">
-                        <img src="image/Vector (7).png" alt="" class="contain">
+                        <img src="./image/dribble.png" alt="" class="contain">
                     </div>
                     <div class="name1">
-                        <img src="image/Company logo (1).png" alt="" class="contain">
+                        <img src="./image/kinsto.png" alt="" class="contain">
                     </div>
                     <div class="name1">
-                        <img src="image/Company logo (2).png" alt="" class="contain">
+                        <img src="./image/angel.png" alt="" class="contain">
                     </div>
                     <div class="name1">
-                        <img src="image/Vector (8).png" alt="" class="contain">
+                        <img src="./image/behance.png" alt="" class="contain">
                     </div>
 
                 </div>
@@ -125,21 +125,21 @@
                     <div class="three-card">
                         <div class="globally">
                             <div class="globally-image">
-                                <img src="image/Big Icons.png" alt="">
+                                <img src="./image/global.png" alt="">
                             </div>
                             <h3>Globally Accepted</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod </p>
                         </div>
                         <div class="globally">
                             <div class="globally-image">
-                                <img src="image/Big Icons.png" alt="">
+                                <img src="./image/global.png" alt="">
                             </div>
                             <h3>Globally Accepted</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod </p>
                         </div>
                         <div class="globally">
                             <div class="globally-image">
-                                <img src="image/Big Icons.png" alt="">
+                                <img src="./image/global.png" alt="">
                             </div>
                             <h3>Globally Accepted</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod </p>
@@ -164,10 +164,10 @@
                     </div>
                     <div class="contant2-down d-flex">
                         <div class="down-left ">
-                            <img src="image/Image ( 592_490 ).png" alt="" class="contain">
+                            <img src="./image/mobile.png" alt="" class="contain">
                         </div>
                         <div class="down-right">
-                            <img src="image/Image ( 592_490 ) (1).png" alt="" class="contain">
+                            <img src="./image/record.png" alt="" class="contain">
                         </div>
                     </div>
                 </div>
@@ -207,18 +207,18 @@
             <div class="container">
                 <div class="wise-box">
                     <div class="name1">
-                        <img src="image/Vector (6).png" alt="" class="contain">
+                        <img src="image/wise.png" alt="" class="contain">
                     </div>
                     <p>I had the pleasure of experiencing the next generation <br> of card solutions with this
                         incredible product. It's <br> refreshing to see such innovation in the financial <br> industry.
                     </p>
                     <div class="wise-image">
-                        <img src="image/Image.png" alt="" class="contain">
+                        <img src="./image/Image.png" alt="" class="contain">
                     </div>
                     <h6>Nick Babich</h6>
                     <span id="lead">Lead Designer</span>
                     <div class="rating">
-                        <img src="image/Rating.png" alt="" class="contain">
+                        <img src="./image/Rating.png" alt="" class="contain">
                     </div>
                 </div>
             </div>
@@ -311,13 +311,13 @@
                     </div>
                     <div class="box2right">
                         <div class="foot-icon">
-                            <img src="./image/fb.icon.png" alt="">
+                            <img src="./image/fb.png" alt="">
                         </div>
                         <div class="foot-icon">
-                            <img src="./image/insta-icon.png" alt="">
+                            <img src="./image/insta.png" alt="">
                         </div>
                         <div class="foot-icon">
-                            <img src="./image/twitter-icon.png" alt="">
+                            <img src="./image/twitter.png" alt="">
                         </div>
                     </div>
                 </div>
